--- a/src/chat.html
+++ b/src/chat.html
@@ -8,7 +8,7 @@
         integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="styles.css" />
-    <title>ChatCord App</title>
+    <title>My Chat Room  App</title>
 </head>
 
 <body>
