--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 		/>
 		<link rel="stylesheet" href="/style.css" />
 		<link rel="stylesheet" href="/styles.css" />
-		<title>ChatCord App</title>
+		<title>My Chat Room  App</title>
 	</head>
 	<body>
 		<div class=" max-w-[500px] my-20 mx-auto">
