last time for tonight

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 		<title>My Chat Room  App</title>
 	</head>
 	<body>
-		<div class=" max-w-[500px] my-20 mx-auto">
+		<div class=" max-w-[500px] my-20 mx-2 md:mx-auto">
 			<header class=" text-center p-5 bg-blue-400 text-3xl font-bold ">
 				<h1></i> Chat App</h1>
 			</header>
