--- a/src/chat.html
+++ b/src/chat.html
@@ -30,8 +30,8 @@
         </main>
        
         <div class="chat-form-container px-4 py-5 bg-blue-400">
-            <form class="flex" id="chat-form">
-                <textarea class="text-lg p-[5px] h-10 max-h-20 flex-1" name="" id="msg" cols="30" rows="10" placeholder="Enter Message" required autocomplete="off"></textarea>
+            <form class="flex" id="chat-form max-w-[194px] md:max-w-full bbc">
+                <textarea class="text-lg p-[5px] w-full flex-1" name="" id="msg" cols="30" rows="0" placeholder="Enter Message" required autocomplete="off"></textarea>
                 <button class="cursor-pointer px-4 py-1 md:text-3xl text-xl font-bold text-center mx-auto hover:text-gray-800 focus:text-gray-600"><i class="fas fa-paper-plane"></i> Send</button>
             </form>
         </div>
