--- a/src/chat.html
+++ b/src/chat.html
@@ -30,7 +30,7 @@
         </main>
        
         <div class="chat-form-container px-4 py-5 bg-blue-400">
-            <form class="flex" id="chat-form max-w-[194px] md:max-w-full bbc">
+            <form class="flex  max-w-[194px] md:max-w-full bbc" id="chat-form">
                 <textarea class="text-lg p-[5px] w-full flex-1" name="" id="msg" cols="30" rows="0" placeholder="Enter Message" required autocomplete="off"></textarea>
                 <button class="cursor-pointer px-4 py-1 md:text-3xl text-xl font-bold text-center mx-auto hover:text-gray-800 focus:text-gray-600"><i class="fas fa-paper-plane"></i> Send</button>
             </form>
